<resources>
    <string name="app_name">TrabalhoHealFit</string>
    <string name="mulher">Mulher</string>
    <string name="homem">Homem</string>
    <string name="Selecione">Selecione</string>
    <string name="Heal_fit">Heal Fit</string>
    <string name="logo">Logo</string>
    <string name="avan_ado">Avançado</string>
    <string name="intermedi_rio">Intermediário</string>
    <string name="iniciante">Iniciante</string>
    <string name="hipertrofia">Hipertrofia</string>
    <string name="heal_fit"><![CDATA[Heal&Fit]]></string>
    <string name="objetivo">Objetivo</string>
    <string name="emagrecimento">Emagrecimento</string>
    <string name="treinoa">treinoA</string>
    <string name="cronometro">cronometro</string>
    <string name="title_activity_cronometro">Cronometro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>