<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_mulher_emagrecimento"
    tools:context=".mulher_emagrecimento">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#5B1C1E1C"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/heal_fit"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/textEmagrecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5008545"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/emagrecimento"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="115dp" />
        <Button
            android:id="@+id/bttIniciante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciante"
            android:textSize="18sp"
            app:backgroundTint="#AE006A33" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/bttIntermediario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermedi_rio"
            android:textSize="18sp"
            app:backgroundTint="#AE006A33" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/bttAvancado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avan_ado"
            android:textSize="18sp"
            app:backgroundTint="#AE006A33" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>